--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,11 +5,14 @@ include_directories(../src)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-global-constructors")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-weak-vtables")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-exit-time-destructors")
 endif()
 
 
 enable_testing()
 find_package(GTest REQUIRED)
-add_executable(tests model/IntervalTest.cpp)
-target_link_libraries(tests GTest::GTest GTest::Main)
+find_library(GMOCK_LIBRARY NAMES libgmock.a)
+add_executable(tests model/IntervalTest.cpp algorithms/AlgorithmsTest.cpp)
+target_link_libraries(tests GTest::GTest GTest::Main ${GMOCK_LIBRARY})
 add_test(NAME tests COMMAND tests)
