Rewrote everything in one function and smart iterators

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ project(ideql CXX)
 include_directories(.)
 
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
 
@@ -16,13 +16,14 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
 add_executable(iseql
 
 		Main.cpp
+
 		model/Interval.h
 		model/Tuple.h
 		model/Relation.h
 		model/Endpoint.h
 		model/Index.h
 
-
-		algorithms/BasicJoins.h
-
-		algorithms/Joins.h)
+		algorithms/Iterators.h
+		algorithms/Joins0.h
+		algorithms/Joins.h
+		algorithms/Joins2.h algorithms/Joins1.h )
