--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.4)
+add_subdirectory(lib/googletest)
 
 
 include_directories(../src)
@@ -11,8 +11,6 @@ endif()
 
 
 enable_testing()
-find_package(GTest REQUIRED)
-find_library(GMOCK_LIBRARY NAMES libgmock.a)
 add_executable(tests model/IntervalTest.cpp algorithms/AlgorithmsTest.cpp)
-target_link_libraries(tests GTest::GTest GTest::Main ${GMOCK_LIBRARY})
+target_link_libraries(tests gmock_main)
 add_test(NAME tests COMMAND tests)
