--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(iseql
 		model/Endpoint.h
 		model/Index.h
 
-		algorithms/Iterators.h
-		algorithms/Joins0.h
+		algorithms/internal/Iterators.h
+		algorithms/internal/Joins0.h
 		algorithms/Joins.h
-		algorithms/Joins2.h algorithms/Joins1.h )
+		algorithms/internal/Joins2.h algorithms/internal/Joins1.h)
