--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,12 @@ endif()
 
 
 enable_testing()
-add_executable(tests model/IntervalTest.cpp algorithms/AlgorithmsTest.cpp)
+add_executable(tests
+	model/IntervalTest.cpp
+	algorithms/JoinsTest.cpp
+	algorithms/JoinsInlinedTest.cpp
+	containers/FastHeapTest.cpp
+	containers/GaplessHashMapTest.cpp
+)
 target_link_libraries(tests gmock_main)
 add_test(NAME tests COMMAND tests)
