Deleted FastStack and FastHeap

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,4 +33,9 @@ add_executable(iseql
 		util/Timer.h
 		util/Experiments.h
 
-		MainBefore.h containers/Util.h)
+		MainBefore.h
+
+		containers/GaplessHashMap.h
+		containers/Util.h
+
+)
