Implemented Leung-Muntz algorithm

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(tests
 	model/IntervalTest.cpp
 	algorithms/JoinsTest.cpp
 	algorithms/JoinsInlinedTest.cpp
+	algorithms/JoinsLMTest.cpp
 	containers/GaplessHashMapTest.cpp
 )
 target_link_libraries(tests gmock_main)
